--- a/_posts/2016-06-21-solid.md
+++ b/_posts/2016-06-21-solid.md
@@ -80,30 +80,28 @@ OO和FP
 
 但**单一职责**原则本身，并没有明确指示我们该如何判定一个类属于**单一职责**的，以及如何达到单一职责的状态。而策略**消除重复**，**分离不同变化方向**，正是让类达到**单一职责**的策略与途径。
 
-![消除重复以达到单一职责]()
-
-
-![分离变化方向以达到单一职责]()
+<img src="https://godsme.github.io/img/srp1.png" width="300px" />
+<img src="https://godsme.github.io/img/srp2.png" width="300px" />
 
 ### 低耦合 (怎么合)
 
 而**开放封闭**原则，正是通过将**不同变化方向**进行分离，从而达到对于已经出现的变化方向，**对于修改是封闭的，对于扩展是开放的**。
 
-[开放封闭原则]()
+<img src="https://godsme.github.io/img/ocp.png" width="300px" />
 
 **里氏替换**原则强调的是，一个**子类**不应该破坏其**父类**与**客户**之间的契约。唯有如此，才能保证：客户与其父类所暴露的接口（即API）所产生的依赖关系是稳定的。子类只应该成为隐藏在API背后的某种具体实现方式。
 
-![里氏替换原则]()
+<img src="https://godsme.github.io/img/lsp.png" width="300px" />
 
 **依赖倒置**原则则强调：为了让依赖关系是稳定的，不应该由实现侧根据自己的技术实现方式定义接口，然后强迫上层（即客户）依赖这种不稳定的API定义，而是应该站在上层（即客户）的角度去定义API（正所谓**依赖倒置**）。
 
 但是，虽然接口由上层定义，但最终接口的实现却依然由下层完成，因此**依赖倒置**描述为：**上层不依赖下层，下层也不依赖上层，双方共同依赖于抽象**。
 
-![依赖倒置原则]()
+<img src="https://godsme.github.io/img/dip.png" width="300px" />
 
 最后，**接口隔离**原则强调的是：**不应该强迫客户依赖它不需要的东西**。显然，这是**缩小依赖范围**策略在面向对象范式下的产物。
 
-![接口隔离原则]()
+<img src="https://godsme.github.io/img/isp.png" width="300px" />
 
 ## 结论
 
